Fixed major tooltip layout issues
The tooltip no longer pushes the logo down when the logo is hovered over

--- a/css/style.css
+++ b/css/style.css
@@ -1354,11 +1354,9 @@ html {
 }
 
 .partners {
-  overflow-x: hidden;
   flex-direction: row;
   display: flex;
   flex-wrap: nowrap;
-  align-items: center;
   justify-content: space-between;
 }
 .partners img {
@@ -1422,6 +1420,21 @@ html {
 .partner-container {
   padding: 0px 20px;
   position: relative;
+}
+
+.all-logos {
+  display: flex;
+  align-items: end;
+}
+
+.full-tooltip {
+  display: none;
+  position: absolute;
+  bottom: 100%;
+}
+
+.logo-container:hover .full-tooltip {
+  display: block;
 }
 
 .article {
